Apply openrewrite Java 17 migration rules.